--- a/vault.html
+++ b/vault.html
@@ -11,7 +11,6 @@
       background-color: #000; color: #fff; overflow-x: hidden;
       padding: env(safe-area-inset); scroll-behavior: smooth;
     }
-
     .cyber-grid {
       position: fixed; top: 0; left: 0; width: 100%; height: 100%;
       background-image: linear-gradient(rgba(99,102,241,0.1) 1px, transparent 1px),
@@ -21,18 +20,14 @@
       animation: gridMove 20s linear infinite;
       z-index: 0; opacity: 0.2;
     }
-
     @keyframes gridMove { from { background-position: 0 0; } to { background-position: 0 20px; } }
-
     .container {
       position: relative; z-index: 1;
       max-width: 430px; margin: auto; padding: 16px; padding-bottom: 80px;
     }
-
     .header-bar {
       display: flex; justify-content: space-between; align-items: center; margin-bottom: 16px;
     }
-
     .nav-btn {
       background: rgba(255,255,255,0.05);
       border: 1px solid rgba(255,255,255,0.08);
@@ -45,12 +40,10 @@
       box-shadow: 0 0 6px rgba(0,255,225,0.1);
       transition: 0.2s ease;
     }
-
     .nav-btn:hover {
       background: rgba(255,255,255,0.08);
       transform: scale(1.03);
     }
-
     .wallet-hud {
       display: flex; justify-content: space-between; align-items: center;
       background: rgba(255,255,255,0.05);
@@ -60,9 +53,7 @@
       margin-bottom: 16px;
       backdrop-filter: blur(10px);
     }
-
     .wallet-hud span { color: #00ffe1; font-size: 14px; }
-
     .glass-panel {
       background: rgba(255,255,255,0.03);
       border-radius: 20px;
@@ -71,10 +62,8 @@
       padding: 24px;
       margin-top: 16px;
     }
-
     .game-title { font-size: 20px; color: #fff; margin-bottom: 8px; text-align: center; }
     .game-details { font-size: 14px; color: #aaa; margin-bottom: 16px; text-align: center; }
-
     .buy-btn {
       display: block; width: 100%;
       padding: 14px;
@@ -88,9 +77,7 @@
       box-shadow: 0 0 10px rgba(99,102,241,0.3);
       transition: 0.2s ease;
     }
-
     .buy-btn:hover { transform: scale(1.03); }
-
     .placeholder-grid {
       margin-top: 24px;
       height: 180px;
@@ -103,7 +90,6 @@
       display: flex; align-items: center; justify-content: center;
       color: rgba(255,255,255,0.3); font-size: 14px;
     }
-
     .info-panel {
       font-size: 13px;
       color: #ccc;
@@ -114,114 +100,32 @@
       border: 1px solid rgba(255,255,255,0.06);
       border-radius: 12px;
     }
-
-    .footer-nav {
-      position: fixed;
-      bottom: 0; left: 0;
-      width: 100%;
-      background: rgba(0,0,0,0.6);
-      border-top: 1px solid rgba(255,255,255,0.08);
-      backdrop-filter: blur(16px);
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      padding: 10px 0;
-      z-index: 10;
-    }
-
-    .footer-nav button {
-      background: none;
-      border: none;
-      color: #00ffe1;
-      font-size: 13px;
-      font-weight: bold;
-      text-align: center;
-      cursor: pointer;
-    }
-
-    .footer-nav button:hover {
-      color: #22d3ee;
-    }
-
-    .top-button {
-      position: fixed;
-      right: 1rem;
-      bottom: 5rem;
-      background: #00ffe1;
-      color: #000;
-      border: none;
-      padding: 10px 14px;
-      border-radius: 30px;
-      font-size: 12px;
-      font-weight: bold;
-      box-shadow: 0 0 10px rgba(0,255,225,0.4);
-      cursor: pointer;
-      display: none;
-      z-index: 10;
-    }
-
-    .dropdown {
-      position: relative;
-      display: inline-block;
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      right: 0;
-      background: rgba(255,255,255,0.04);
-      border: 1px solid rgba(255,255,255,0.08);
-      border-radius: 10px;
-      min-width: 160px;
-      z-index: 99;
-      backdrop-filter: blur(10px);
-    }
-
-    .dropdown-content a {
-      color: #00ffe1;
-      padding: 10px 14px;
-      display: block;
-      font-size: 13px;
-      text-decoration: none;
-    }
-
-    .dropdown-content a:hover {
-      background-color: rgba(255,255,255,0.08);
-    }
-
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-
     .status-badge {
-    display: inline-block;
-    font-size: 12px;
-    padding: 4px 8px;
-    border-radius: 6px;
-    font-weight: bold;
-    margin-top: 8px;
-    background: #22d3ee20;
-    color: #22d3ee;
-    border: 1px solid #22d3ee40;
-    text-align: center;
-  }
-  .status-live { background: #34d39920; color: #34d399; border-color: #34d39960; }
-  .status-final { background: #fbbf2420; color: #fbbf24; border-color: #fbbf2460; }
-  .status-paid { background: #8b5cf620; color: #8b5cf6; border-color: #8b5cf640; }
-
-  .pot-animated { animation: potPulse 1s ease-in-out; }
-  @keyframes potPulse {
-    0% { transform: scale(1); color: #fff; }
-    50% { transform: scale(1.1); color: #00ffe1; }
-    100% { transform: scale(1); color: #fff; }
-  }
-
-  .glitch-flicker { animation: flicker 0.2s linear 1; }
-  @keyframes flicker {
-    0%, 100% { opacity: 1; transform: scale(1); }
-    50% { opacity: 0.5; transform: scale(1.02); }
-  }
-    
+      display: inline-block;
+      font-size: 12px;
+      padding: 4px 8px;
+      border-radius: 6px;
+      font-weight: bold;
+      margin-top: 8px;
+      background: #22d3ee20;
+      color: #22d3ee;
+      border: 1px solid #22d3ee40;
+      text-align: center;
+    }
+    .status-live { background: #34d39920; color: #34d399; border-color: #34d39960; }
+    .status-final { background: #fbbf2420; color: #fbbf24; border-color: #fbbf2460; }
+    .status-paid { background: #8b5cf620; color: #8b5cf6; border-color: #8b5cf640; }
+    .pot-animated { animation: potPulse 1s ease-in-out; }
+    @keyframes potPulse {
+      0% { transform: scale(1); color: #fff; }
+      50% { transform: scale(1.1); color: #00ffe1; }
+      100% { transform: scale(1); color: #fff; }
+    }
+    .glitch-flicker { animation: flicker 0.2s linear 1; }
+    @keyframes flicker {
+      0%, 100% { opacity: 1; transform: scale(1); }
+      50% { opacity: 0.5; transform: scale(1.02); }
+    }
   </style>
 </head>
 <body>
@@ -238,33 +142,27 @@
         </div>
       </div>
     </div>
-
     <div class="wallet-hud">
       <span id="wallet">0x348c...0450</span>
       <span id="balance">8,732,109 Y2K</span>
     </div>
-
     <div class="glass-panel">
       <div class="game-title">Stanley Cup Finals – Game 1</div>
       <div class="game-details">Buy-in: 100 Y2K<br>Pot Total: 4,200 Y2K</div>
       <div id="statusBadge" class="status-badge status-live">LIVE</div>
-
-<!-- Admin-only status selector -->
-<select id="statusSelector" style="margin-top: 12px; width: 100%; padding: 8px; border-radius: 8px; background: #111; color: #00ffe1; border: 1px solid #00ffe140; display: none;">
-  <option value="live">LIVE</option>
-  <option value="final">FINAL</option>
-  <option value="paid">PAID</option>
-</select>
+      <select id="statusSelector" style="margin-top: 12px; width: 100%; padding: 8px; border-radius: 8px; background: #111; color: #00ffe1; border: 1px solid #00ffe140; display: none;">
+        <option value="live">LIVE</option>
+        <option value="final">FINAL</option>
+        <option value="paid">PAID</option>
+      </select>
       <button class="buy-btn">Buy a Square</button>
     </div>
-
     <div class="placeholder-grid">[ Square Grid Coming Soon ]</div>
-
     <div class="info-panel">
       Pick a square. If your number combo matches the final score, you win the pot. Simple as that.
     </div>
 
-      </div>
+      </div> <!-- end container -->
 
   <button onclick="window.scrollTo({ top: 0, behavior: 'smooth' })" class="top-button" id="topBtn">↑ Top</button>
 
@@ -274,62 +172,78 @@
     <button onclick="alert('Admin Only')">Create Game</button>
   </div>
 
+  <!-- Firebase App (the core Firebase SDK) -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getFirestore, doc, getDoc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyCJwqDFZtf1PkZwAalOaf2_7eWtej5HIfA",
+      authDomain: "y2k-arcade.firebaseapp.com",
+      projectId: "y2k-arcade",
+      storageBucket: "y2k-arcade.appspot.com",
+      messagingSenderId: "1063043176357",
+      appId: "1:1063043176357:web:20bc22e9cbf269ff40fa4c"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    const ADMIN_WALLET = "0x348c2F06C64b4465f90446Fd806aFf3A01220450".toLowerCase();
+    const badge = document.getElementById("statusBadge");
+    const selector = document.getElementById("statusSelector");
+    const docRef = doc(db, "games", "stanley-cup-g1");
+
+    // Show selector only for admin
+    if (window.ethereum && typeof window.ethereum.request === "function") {
+      window.ethereum.request({ method: 'eth_requestAccounts' }).then(([addr]) => {
+        if (addr.toLowerCase() === ADMIN_WALLET) selector.style.display = "block";
+      });
+    }
+
+    // Update Firebase on change
+    selector.addEventListener("change", async () => {
+      const val = selector.value;
+      await setDoc(docRef, { status: val }, { merge: true });
+    });
+
+    // Listen live to Firebase
+    onSnapshot(docRef, (docSnap) => {
+      if (docSnap.exists()) {
+        const status = docSnap.data().status || "live";
+        badge.textContent = status.toUpperCase();
+        badge.className = "status-badge status-" + status;
+      }
+    });
+  </script>
+
   <script>
     const topBtn = document.getElementById("topBtn");
     window.addEventListener("scroll", () => {
       topBtn.style.display = window.scrollY > 200 ? "block" : "none";
     });
-  </script>
 
- <script>
-  function pulsePot() {
-    const pot = document.querySelector(".game-details");
-    if (!pot) return;
-    pot.classList.add("pot-animated");
-    setTimeout(() => pot.classList.remove("pot-animated"), 1000);
-  }
-
-  function flickerButton(btn) {
-    btn.classList.add("glitch-flicker");
-    setTimeout(() => btn.classList.remove("glitch-flicker"), 300);
-  }
-
-  document.addEventListener("DOMContentLoaded", () => {
-    const buyBtn = document.querySelector(".buy-btn");
-    if (buyBtn) {
-      buyBtn.addEventListener("click", () => {
-        flickerButton(buyBtn);
-        pulsePot();
-      });
+    function pulsePot() {
+      const pot = document.querySelector(".game-details");
+      if (!pot) return;
+      pot.classList.add("pot-animated");
+      setTimeout(() => pot.classList.remove("pot-animated"), 1000);
     }
-  });
-</script> 
 
-  <script>
-  const ADMIN_WALLET = "0x348c2F06C64b4465f90446Fd806aFf3A01220450".toLowerCase();
+    function flickerButton(btn) {
+      btn.classList.add("glitch-flicker");
+      setTimeout(() => btn.classList.remove("glitch-flicker"), 300);
+    }
 
-  document.addEventListener("DOMContentLoaded", async () => {
-    const badge = document.getElementById("statusBadge");
-    const selector = document.getElementById("statusSelector");
-
-    if (window.ethereum && typeof window.ethereum.request === "function") {
-      try {
-        const [connected] = await window.ethereum.request({ method: 'eth_requestAccounts' });
-        if (connected.toLowerCase() === ADMIN_WALLET) {
-          selector.style.display = "block";
-        }
-      } catch (e) {
-        console.warn("Wallet check failed:", e);
+    document.addEventListener("DOMContentLoaded", () => {
+      const buyBtn = document.querySelector(".buy-btn");
+      if (buyBtn) {
+        buyBtn.addEventListener("click", () => {
+          flickerButton(buyBtn);
+          pulsePot();
+        });
       }
-    }
-
-    selector.addEventListener("change", () => {
-      const val = selector.value;
-      badge.textContent = val.toUpperCase();
-      badge.className = "status-badge status-" + val;
     });
-  });
-</script>
-  
+  </script>
 </body>
 </html>
